experimenting with interfaces
