# web/handlers/handlers.go
@@ -48,7 +48,11 @@ func AboutPage(c echo.Context) error{
 		"UserID": userID,
 	})
 }
-
+// @Summary Info
+// @Description Основная информация о проекте
+// @Router /users/:id/info [get]
+// @Produce html
+// @Success 200
 func UserInfoPage(c echo.Context) error{
 	userID := c.Param("user_id")
 	user := mod.User{}
@@ -58,17 +62,15 @@ func UserInfoPage(c echo.Context) error{
 	}
 	defer conn.Close(ctx)
 	
-	err = conn.QueryRow(ctx, os.Getenv("GET_INFO")).Scan(&user.CreatedAt, &user.Email)
+	err = conn.QueryRow(ctx, os.Getenv("GET_INFO"), userID).Scan(&user.CreatedAt, &user.Email)
 	if err != nil{
 		logger.Err(err).Msg("error")
 	}
-	timeInfo := user.CreatedAt
-	
-	emailInfo := user.Email
+
 	return c.Render(http.StatusOK, "info.html", map[string]interface{}{
 		"Title": "Info",
-		"TimeInfo": timeInfo.Format("2006-01-02 15:04:05"),
-		"EmailInfo": emailInfo,
+		"TimeInfo": user.CreatedAt.Format("2006-01-02 15:04:05"),
+		"EmailInfo": user.Email,
 		"UserID": userID,
 	})
 }	
